# benchmarkit

./: .gitignore  AGENTS.md  README.md  benchmarkit.py  endpoints.json  pyproject.toml  questions.json  requirements.txt
conf/: endpoints.json
resources/: questions.json
src/: __init__.py  bench.py  config.py  llm.py  main.py  state.py  utils.py
tests/: conftest.py  test_config.py  test_llm.py  test_state.py  test_utils.py
